--- a/css/main.css
+++ b/css/main.css
@@ -377,7 +377,7 @@ img {
 
 .intor_text {
     font-size: 16px;
-    color: #737373;
+    color: #1f1f1f;
     line-height: 26px;
     letter-spacing: 2px;
     padding-top: 9px;
