--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
 }
 
 body {
+    background:#f5f5f5;
     margin: 0px;
     font-family: \5FAE\8EDF\6B63\9ED1\9AD4, \65B0\7D30\660E\9AD4;
 }
@@ -662,6 +663,8 @@ img {
 
 .works_area_tip {
     width: 100%;
+    font-size:16px;
+    letter-spacing:1px;
     color: #1f1f1f;
     text-align: center;
     position: absolute;
@@ -1874,16 +1877,7 @@ img {
     }
 }
 
-@media (max-width:600px) {
-    .footer {
-        font-size: 15px;
-        padding: 0 20px;
-    }
 
-    .footer_middle {
-        bottom: -33px;
-    }
-}
 
 @media (max-width:450px) {
     .footer {
@@ -1892,28 +1886,6 @@ img {
 
     .footer_middle {
         bottom: -34px;
-    }
-}
-
-@media (max-width:400px) {
-    .footer_middle {
-        bottom: -24px;
-    }
-
-    .footer_container {
-        height: 60px;
-    }
-
-    .footer_infor {
-        padding-top: 11px;
-    }
-
-    .footer_infor span {
-        top: 8px;
-    }
-
-    .footer_rights {
-        padding-top: 4px;
     }
 }
 
