--- a/website/sino/css/page.css
+++ b/website/sino/css/page.css
@@ -179,11 +179,12 @@ select::-ms-expand {
 
 .pic_container {
     width: 100%;
+    text-align:center;
     padding: 50px 50px;
 }
 
 .pic_container img {
-    width: 100%;
+    max-width: 100%;
     box-shadow: 0px 16px 32px rgba(0, 0, 0, 0.2);
 }
 
