--- a/website/sino/css/page.css
+++ b/website/sino/css/page.css
@@ -179,7 +179,7 @@ select::-ms-expand {
 
 .pic_container {
     width: 100%;
-    text-align:center;
+    text-align: center;
     padding: 50px 50px;
 }
 
@@ -197,5 +197,32 @@ select::-ms-expand {
 @media (max-width:768px) {
     .pic_container {
         padding: 30px 30px;
+    }
+}
+
+.text_container {
+    width: 1280px;
+    margin: 50px auto;
+    line-height:1.5;
+}
+
+.text_container .title {
+    font-size: 24px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.text_container .note {
+    font-size: 20px;
+    text-align: left;
+    display: flex;
+    justify-content: center;
+}
+
+@media (max-width:1360px) {
+    .pic_container {
+        width: 100%;
+        padding: 0px 30px;
     }
 }
