--- a/website/yuan/css/page.css
+++ b/website/yuan/css/page.css
@@ -196,3 +196,29 @@ select::-ms-expand {
         padding: 30px 30px;
     }
 }
+.text_container {
+    width: 1280px;
+    margin: 50px auto;
+    line-height:1.5;
+}
+
+.text_container .title {
+    font-size: 24px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.text_container .note {
+    font-size: 20px;
+    text-align: left;
+    display: flex;
+    justify-content: center;
+}
+
+@media (max-width:1360px) {
+    .pic_container {
+        width: 100%;
+        padding: 0px 30px;
+    }
+}
