--- a/website/sino/css/page.css
+++ b/website/sino/css/page.css
@@ -203,7 +203,7 @@ select::-ms-expand {
 .text_container {
     width: 1280px;
     margin: 50px auto;
-    line-height:1.5;
+    line-height: 1.7;
 }
 
 .text_container .title {
@@ -221,8 +221,37 @@ select::-ms-expand {
 }
 
 @media (max-width:1360px) {
-    .pic_container {
+    .text_container {
         width: 100%;
+        padding: 0px 50px;
+    }
+}
+
+@media (max-width:768px) {
+    .text_container .title {
+        font-size: 22px;
+        margin-bottom: 10px;
+    }
+
+    .text_container .note {
+        font-size: 18px;
+    }
+}
+
+@media (max-width:540px) {
+    .nav {
+        font-size: 16px;
+    }
+
+    .text_container {
         padding: 0px 30px;
+    }
+
+    .text_container .title {
+        font-size: 20px;
+    }
+
+    .text_container .note {
+        font-size: 16px;
     }
 }
