--- a/website/yuan/css/page.css
+++ b/website/yuan/css/page.css
@@ -123,7 +123,6 @@ select::-ms-expand {
 
 @media (max-width:768px) {
     .nav {
-        font-size: 16px;
         padding-top: 30px;
     }
 
@@ -176,7 +175,7 @@ select::-ms-expand {
 
 .pic_container {
     width: 100%;
-    text-align:center;
+    text-align: center;
     padding: 50px 50px;
 }
 
@@ -196,10 +195,11 @@ select::-ms-expand {
         padding: 30px 30px;
     }
 }
+
 .text_container {
     width: 1280px;
     margin: 50px auto;
-    line-height:1.5;
+    line-height: 1.7;
 }
 
 .text_container .title {
@@ -217,8 +217,37 @@ select::-ms-expand {
 }
 
 @media (max-width:1360px) {
-    .pic_container {
+    .text_container {
         width: 100%;
+        padding: 0px 50px;
+    }
+}
+
+@media (max-width:768px) {
+    .text_container .title {
+        font-size: 22px;
+        margin-bottom: 10px;
+    }
+
+    .text_container .note {
+        font-size: 18px;
+    }
+}
+
+@media (max-width:540px) {
+    .nav {
+        font-size: 16px;
+    }
+
+    .text_container {
         padding: 0px 30px;
+    }
+
+    .text_container .title {
+        font-size: 20px;
+    }
+
+    .text_container .note {
+        font-size: 16px;
     }
 }
