--- a/website/cath/css/page.css
+++ b/website/cath/css/page.css
@@ -240,3 +240,56 @@ a:hover {
         width: 100%;
     }
 }
+
+.text_container {
+    width: 1280px;
+    margin: 50px auto;
+    line-height: 1.7;
+}
+
+.text_container .title {
+    font-size: 24px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.text_container .note {
+    font-size: 20px;
+    text-align: left;
+    display: flex;
+    justify-content: center;
+}
+
+@media (max-width:1360px) {
+    .text_container {
+        width: 100%;
+        padding: 0px 50px;
+    }
+}
+
+@media (max-width:768px) {
+    .text_container .title {
+        font-size: 22px;
+        margin-bottom: 10px;
+    }
+
+    .text_container .note {
+        font-size: 18px;
+    }
+}
+
+@media (max-width:540px) {
+
+    .text_container {
+        padding: 0px 30px;
+    }
+
+    .text_container .title {
+        font-size: 20px;
+    }
+
+    .text_container .note {
+        font-size: 16px;
+    }
+}
