--- a/css/index.css
+++ b/css/index.css
@@ -758,6 +758,7 @@ select::-ms-expand {
 
 .page_title_container {
     font-size: 52px;
+    font-weight: bold;
     font-family: SourceHanSerif-Bold !important;
 }
 
@@ -789,6 +790,7 @@ select::-ms-expand {
     width: 100%;
     height: 45px;
     font-size: 28px;
+    font-weight: bold;
     font-family: SourceHanSerif-Bold !important;
     margin-bottom: 40px;
     display: flex;
